apps: Fix issue with jumping action buttons in WebKit browsers
Related to https://bugs.webkit.org/show_bug.cgi?id=187903.

Fixes #13940
Closes #13945

--- a/pkg/apps/application.css
+++ b/pkg/apps/application.css
@@ -1,22 +1,23 @@
 /* Application list */
 
 @import "../lib/table.css";
+@import "../lib/cockpit-components-table.scss";
 
-.app-list caption {
+.app-list header {
     color: unset;
 }
 
-.app-list caption h2 {
+.app-list header h2 {
     margin: 0px;
 }
 
-.app-list caption table td:nth-child(2) {
+.app-list header table td:nth-child(2) {
     width: 100%;
     padding-left: 6em;
     color: var(--color-gray-11);
 }
 
-.app-list caption table td:nth-child(3) {
+.app-list header table td:nth-child(3) {
     text-align: right;
     padding-right: 10px;
     padding-left: 2em;
